--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -12,13 +12,13 @@
         android:id="@+id/aeae"
         layout="@layout/calc_panel"
 
-        android:layout_width="408dp"
-        android:layout_height="203dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.94" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
