--- a/app/src/main/res/layout/calc_panel.xml
+++ b/app/src/main/res/layout/calc_panel.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="60dp"
         android:onClick="addNum"
         android:text="7"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toStartOf="@+id/button2"
@@ -26,6 +27,7 @@
         android:layout_marginTop="60dp"
         android:onClick="addNum"
         android:text="8"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toStartOf="@+id/button3"
@@ -39,6 +41,7 @@
         android:layout_marginTop="60dp"
         android:onClick="addNum"
         android:text="9"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toStartOf="@+id/button4"
@@ -52,6 +55,7 @@
         android:layout_marginTop="60dp"
         android:onClick="addOP"
         android:text="*"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button8"
         app:layout_constraintEnd_toEndOf="@+id/button20"
@@ -63,6 +67,7 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="4"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toStartOf="@+id/button6"
@@ -75,6 +80,7 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="5"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toStartOf="@+id/button7"
@@ -87,6 +93,7 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="6"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button11"
         app:layout_constraintEnd_toStartOf="@+id/button8"
@@ -99,6 +106,7 @@
         android:layout_height="60dp"
         android:onClick="addOP"
         android:text="-"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button12"
         app:layout_constraintEnd_toEndOf="@+id/button4"
@@ -110,8 +118,8 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="1"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/button13"
         app:layout_constraintEnd_toStartOf="@+id/button10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button5" />
@@ -122,6 +130,7 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="2"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button14"
         app:layout_constraintEnd_toStartOf="@+id/button11"
@@ -134,6 +143,7 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="3"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button15"
         app:layout_constraintEnd_toStartOf="@+id/button12"
@@ -146,20 +156,11 @@
         android:layout_height="60dp"
         android:onClick="addOP"
         android:text="+"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button16"
         app:layout_constraintEnd_toEndOf="@+id/button8"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="50dp"
-        android:layout_height="60dp"
-        app:cornerRadius="30dp"
-        android:text=""
-        app:layout_constraintEnd_toStartOf="@+id/button14"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
 
     <Button
         android:id="@+id/button14"
@@ -167,9 +168,11 @@
         android:layout_height="60dp"
         android:onClick="addNum"
         android:text="0"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toStartOf="@+id/button15"
-        app:layout_constraintStart_toEndOf="@+id/button13"
+        app:layout_constraintHorizontal_bias="0.84"
+        app:layout_constraintStart_toEndOf="@id/button17"
         app:layout_constraintTop_toBottomOf="@+id/button10" />
 
     <Button
@@ -178,6 +181,7 @@
         android:layout_height="60dp"
         android:onClick="addPoint"
         android:text="."
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toStartOf="@+id/button16"
         app:layout_constraintStart_toEndOf="@+id/button14"
@@ -189,6 +193,7 @@
         android:layout_height="60dp"
         android:onClick="checkNumbers"
         android:text="="
+        android:textColor="@color/white"
         app:backgroundTint="@color/orange"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="@+id/button12"
@@ -200,18 +205,24 @@
         android:layout_height="60dp"
         android:onClick="clearTextView"
         android:text="C"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/button14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button9" />
 
     <Button
         android:id="@+id/button19"
         android:layout_width="50dp"
         android:layout_height="60dp"
         android:onClick="delTextChar"
-        android:text="d"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
+        app:icon="@android:drawable/ic_input_delete"
+        app:iconGravity="textEnd"
+        app:iconPadding="0dp"
+        app:iconSize="27dp"
+        app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="@+id/button3"
         app:layout_constraintTop_toTopOf="parent"
@@ -224,6 +235,7 @@
         android:layout_marginEnd="16dp"
         android:onClick="addOP"
         android:text="/"
+        android:textColor="@color/white"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
