--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Графики"
+        android:onClick="showGraphActivity"
         app:layout_constraintEnd_toEndOf="@+id/buttonCalc"
         app:layout_constraintStart_toStartOf="@+id/buttonCalc"
         app:layout_constraintTop_toBottomOf="@+id/buttonCalc" />
